--- a/Draw/Controller/Shop/VendingController~ipad.xib
+++ b/Draw/Controller/Shop/VendingController~ipad.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<int key="IBDocument.SystemTarget">1280</int>
+		<string key="IBDocument.SystemVersion">10K549</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1179</string>
+			<string key="NS.object.0">933</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUILabel</string>
@@ -44,7 +44,6 @@
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="945896182"/>
 						<reference key="NSNextKeyView" ref="424085961"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -66,7 +65,6 @@
 										<string key="NSFrameSize">{736, 785}</string>
 										<reference key="NSSuperview" ref="779889756"/>
 										<reference key="NSNextKeyView" ref="779750223"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 										<object class="NSCustomResource" key="IBUIImage">
@@ -80,7 +78,6 @@
 										<string key="NSFrame">{{12, 150}, {712, 117}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
 										<reference key="NSNextKeyView" ref="416091545"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 										<object class="NSCustomResource" key="IBUIImage" id="314934765">
@@ -94,7 +91,6 @@
 										<string key="NSFrame">{{12, 390}, {712, 117}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
 										<reference key="NSNextKeyView" ref="1012386690"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 										<reference key="IBUIImage" ref="314934765"/>
@@ -105,7 +101,6 @@
 										<string key="NSFrame">{{12, 628}, {712, 120}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
 										<reference key="NSNextKeyView" ref="401141872"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 										<reference key="IBUIImage" ref="314934765"/>
@@ -116,7 +111,6 @@
 										<string key="NSFrame">{{96, 196}, {34, 34}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
 										<reference key="NSNextKeyView" ref="240215377"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 										<object class="NSCustomResource" key="IBUIImage" id="432774600">
@@ -130,7 +124,6 @@
 										<string key="NSFrame">{{138, 194}, {100, 37}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
 										<reference key="NSNextKeyView" ref="369374152"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
 										<int key="IBUIContentMode">7</int>
@@ -160,7 +153,6 @@
 										<string key="NSFrame">{{108, 673}, {100, 37}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
 										<reference key="NSNextKeyView" ref="111807258"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
 										<int key="IBUIContentMode">7</int>
@@ -180,7 +172,6 @@
 										<string key="NSFrame">{{309, 194}, {40, 37}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
 										<reference key="NSNextKeyView" ref="482694725"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 										<reference key="IBUIImage" ref="432774600"/>
@@ -191,7 +182,6 @@
 										<string key="NSFrame">{{69, 63.5}, {122, 122}}</string>
 										<reference key="NSSuperview" ref="779889756"/>
 										<reference key="NSNextKeyView" ref="1017402077"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 										<object class="NSCustomResource" key="IBUIImage" id="971407248">
@@ -203,7 +193,6 @@
 								<string key="NSFrameSize">{736, 785}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="400034732"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="262949035">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MCAwAA</bytes>
@@ -216,7 +205,6 @@
 								<string key="NSFrame">{{57, 298}, {146, 133}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="572181171"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<reference key="IBUIImage" ref="971407248"/>
@@ -227,7 +215,6 @@
 								<string key="NSFrame">{{57, 529}, {146, 133}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="134006236"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<reference key="IBUIImage" ref="971407248"/>
@@ -238,7 +225,6 @@
 								<string key="NSFrame">{{304, 63.5}, {122, 122}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="770080089"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<reference key="IBUIImage" ref="971407248"/>
@@ -249,7 +235,6 @@
 								<string key="NSFrame">{{529, 58}, {146, 133}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="46949767"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<reference key="IBUIImage" ref="971407248"/>
@@ -260,7 +245,6 @@
 								<string key="NSFrame">{{55, 436}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="990210300"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<reference key="IBUIImage" ref="432774600"/>
@@ -271,7 +255,6 @@
 								<string key="NSFrame">{{108, 434}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="238489920"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -291,7 +274,6 @@
 								<string key="NSFrame">{{55, 673}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="516899176"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<reference key="IBUIImage" ref="432774600"/>
@@ -302,7 +284,6 @@
 								<string key="NSFrame">{{359, 192}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="240110667"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -322,7 +303,6 @@
 								<string key="NSFrame">{{551, 194}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="776405328"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<reference key="IBUIImage" ref="432774600"/>
@@ -333,7 +313,6 @@
 								<string key="NSFrame">{{601, 194}, {100, 37}}</string>
 								<reference key="NSSuperview" ref="493068356"/>
 								<reference key="NSNextKeyView" ref="741407424"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -351,7 +330,6 @@
 						<string key="NSFrame">{{16, 89}, {736, 785}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
 						<reference key="NSNextKeyView" ref="779889756"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="262949035"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -363,7 +341,6 @@
 						<string key="NSFrame">{{16, 13}, {88, 80}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
 						<reference key="NSNextKeyView" ref="598108438"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -400,7 +377,6 @@
 						<string key="NSFrame">{{225.5, 16}, {317, 66}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
 						<reference key="NSNextKeyView" ref="493068356"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -414,7 +390,6 @@
 						<string key="NSFrame">{{16, 881}, {276, 117}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
 						<reference key="NSNextKeyView" ref="352309208"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -428,11 +403,9 @@
 						<string key="NSFrame">{{312, 908}, {228, 65}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
 						<reference key="NSNextKeyView" ref="101527790"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="262949035"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-						<bool key="IBUIEnabled">NO</bool>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
@@ -460,7 +433,6 @@
 						<string key="NSFrame">{{318.5, 917}, {48, 48}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
 						<reference key="NSNextKeyView" ref="470260798"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -473,7 +445,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{556, 908}, {196, 65}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -506,7 +478,6 @@
 						<string key="NSFrame">{{110, 880}, {86, 78}}</string>
 						<reference key="NSSuperview" ref="945896182"/>
 						<reference key="NSNextKeyView" ref="776394169"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
@@ -574,6 +545,15 @@
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">75</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickCoin:</string>
+						<reference key="source" ref="776394169"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">77</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -832,15 +812,11 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">76</int>
+			<int key="maxID">77</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
-		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
-			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
-		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
@@ -855,6 +831,6 @@
 			<string key="tomato@2x.png">{122, 122}</string>
 			<string key="wood_shop_bg@2x.png">{640, 960}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1179</string>
+		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
