--- a/Draw/Dice/Controller/Play/DiceGamePlayController.xib
+++ b/Draw/Dice/Controller/Play/DiceGamePlayController.xib
@@ -203,6 +203,10 @@
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="857334972"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor" id="57145033">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MCAwAA</bytes>
+						</object>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -218,13 +222,13 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">5</float>
 						<int key="IBUINumberOfLines">2004</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="43945055">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="17596019">
 							<int key="type">1</int>
-							<double key="pointSize">12</double>
+							<double key="pointSize">13</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="394305775">
+						<object class="NSFont" key="IBUIFont" id="506507094">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">12</double>
+							<double key="NSSize">13</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -248,8 +252,8 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">5</float>
 						<int key="IBUINumberOfLines">2003</int>
-						<reference key="IBUIFontDescription" ref="43945055"/>
-						<reference key="IBUIFont" ref="394305775"/>
+						<reference key="IBUIFontDescription" ref="17596019"/>
+						<reference key="IBUIFont" ref="506507094"/>
 					</object>
 					<object class="IBUILabel" id="958100818">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -271,8 +275,8 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">5</float>
 						<int key="IBUINumberOfLines">2002</int>
-						<reference key="IBUIFontDescription" ref="43945055"/>
-						<reference key="IBUIFont" ref="394305775"/>
+						<reference key="IBUIFontDescription" ref="17596019"/>
+						<reference key="IBUIFont" ref="506507094"/>
 					</object>
 					<object class="IBUILabel" id="741808051">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -293,15 +297,15 @@
 						<nil key="IBUIHighlightedColor"/>
 						<float key="IBUIMinimumFontSize">5</float>
 						<int key="IBUINumberOfLines">2006</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="735718036">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="803441929">
 							<string key="name">Palatino-Roman</string>
 							<string key="family">Palatino</string>
 							<int key="traits">0</int>
-							<double key="pointSize">12</double>
+							<double key="pointSize">13</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="383270461">
+						<object class="NSFont" key="IBUIFont" id="266987791">
 							<string key="NSName">Palatino-Roman</string>
-							<double key="NSSize">12</double>
+							<double key="NSSize">13</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -325,8 +329,8 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">5</float>
 						<int key="IBUINumberOfLines">2005</int>
-						<reference key="IBUIFontDescription" ref="735718036"/>
-						<reference key="IBUIFont" ref="383270461"/>
+						<reference key="IBUIFontDescription" ref="803441929"/>
+						<reference key="IBUIFont" ref="266987791"/>
 					</object>
 					<object class="IBUIView" id="45767203">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -336,10 +340,7 @@
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="631524560"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="57145033">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MCAwAA</bytes>
-						</object>
+						<reference key="IBUIBackgroundColor" ref="57145033"/>
 						<int key="IBUITag">3001</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
