--- a/Draw/Dice/View/DiceShowView/DicesResultView.xib
+++ b/Draw/Dice/View/DiceShowView/DicesResultView.xib
@@ -40,8 +40,10 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 12}, {48, 36}}</string>
 						<reference key="NSSuperview" ref="899833464"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="644101571"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<int key="IBUITag">1</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -54,6 +56,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{16, 5}, {17, 20}}</string>
 						<reference key="NSSuperview" ref="899833464"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="256675359"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUITag">12</int>
@@ -69,6 +72,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{4, 12}, {17, 20}}</string>
 						<reference key="NSSuperview" ref="899833464"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="596549976"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUITag">11</int>
@@ -81,6 +85,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{28, 11}, {17, 20}}</string>
 						<reference key="NSSuperview" ref="899833464"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUITag">13</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -92,6 +97,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 24}, {17, 20}}</string>
 						<reference key="NSSuperview" ref="899833464"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="488889473"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUITag">10</int>
@@ -104,6 +110,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{24, 24}, {17, 20}}</string>
 						<reference key="NSSuperview" ref="899833464"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="21328088"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUITag">14</int>
@@ -114,6 +121,7 @@
 				</array>
 				<string key="NSFrameSize">{48, 48}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="499526388"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -208,7 +216,18 @@
 			<nil key="sourceID"/>
 			<int key="maxID">10</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">DicesResultView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DicesResultView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
